# softwarehub

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_cache_tables.sql  002_add_icon_data_column.sql  003_add_search_indexes.sql
src-tauri/src/: installers.rs  kde_theme.rs  lib.rs  main.rs  util.rs
src-tauri/src/cache/: api.rs  icons.rs  mod.rs  queries.rs  types.rs
src/lib/: Titlebar.svelte  utils.ts
src/lib/components/: AppCard.svelte  AppDetailsOverlay.svelte  CacheProgressBar.svelte  DownloadCenter.svelte
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button-variants.ts  button.svelte  index.ts
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-trigger.svelte  dropdown-menu.svelte  index.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/progress/: progress.svelte
src/lib/components/ui/separator/: separator.svelte
src/lib/components/ui/skeleton/: skeleton.svelte
src/lib/services/: cache.ts  database.ts  flathub.ts
src/lib/stores/: overlay.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/[id]/: +page.svelte
src/routes/category/[id]/: +page.svelte
