[package]
name = "softwarehub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "softwarehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json"] }
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
libflatpak = "0.7.0"
libc = "0.2"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
futures = "0.3"
